Fix spacing and styling on My investment page

--- a/src/scss/_dao.scss
+++ b/src/scss/_dao.scss
@@ -4,7 +4,7 @@
     display: flex;
     gap: 40px;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 
     .link_button {
         color: #787e82;
@@ -12,7 +12,7 @@
         padding: 0 0 10px 0;
         cursor: pointer;
         font-size: 24px;
-        font-weight: 700;
+        font-weight: 600;
         border-bottom: 2px solid transparent;
 
         &:hover {
@@ -28,6 +28,12 @@
         border-radius: 0;
         color: $global-red-button;
         border-bottom: 2px solid $global-red-button;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    #dao_actions_top_bar {
+        margin-bottom: 60px;
     }
 }
 
@@ -247,6 +253,12 @@
     }
 }
 
+.arrow-container {
+    display: flex;
+    align-items: flex-start;
+    height: 36px;
+}
+
 @media only screen and (min-width: 1780px) {
     .buy-shares-content {
         justify-content: flex-start;
@@ -288,6 +300,12 @@
                     }
                 }
             }
+        }
+    }
+
+    .available-shares {
+        .arrow-container {
+            display: none;
         }
     }
 }
